--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>BimData platform</title>
-    <link rel="shortcut icon" type="image/png" href="/static/favico.png"/>
+    <link rel="shortcut icon" type="image/png" href="/static/img/favicon.png"/>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://transloadit.edgly.net/releases/uppy/v0.26.0/dist/uppy.min.css">
